Fix multicarousel items being invisible

--- a/less/bedazzled.less
+++ b/less/bedazzled.less
@@ -210,6 +210,7 @@
   & > &-inner {
     @media (min-width: @bs-md) {
       width: @mid-width;
+      height: @shows-carousel-height;
       margin: 10px auto;
       position: relative;
       overflow: hidden;
